<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reacticle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello Kaleb</string>
    <string name="Windage">Windage:</string>
    <string name="Elevation">Elevation:</string>
    <string name="Auto">Auto</string>
    <string name="AutoCalculate">Auto-Calculate All</string>
    <string name="LockScreen">Lock Screen</string>
    <string name="Manual">Manual Setup</string>
    <string name="BulletProfile">Current Bullet Profile</string>
    <string name="LoadBullet">Load Bullet Profile</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="bulletvar1">BulletVar1</string>
    <string name="bulletvar2">BulletVar2</string>
    <string name="bulletvar3">BulletVar3</string>
    <string name="bulletvar4">BulletVar4</string>
    <string name="bulletvar5">BulletVar5</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="title_activity_manual_inpput">ManualInpputActivity</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="windspeed">Wind Speed (mph):</string>
    <string name="windDirection">Wind Direction (degrees left of target):</string>
    <string name="calculate">Calculate</string>
    
</resources>
